2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/ast.cpp (AstSwitchBlockStatement): Fix some debug output
	formatting errors - patch 197.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/decl.cpp (ProcessFieldDeclaration): 
	* src/diagnose.cpp (getErrorMessage):
	* src/stream.cpp (ProcessInputUnicode): Explicitly initialize some
	variables, restrict scope of temporaries, and fix some comment
	typos - patches 202, 203.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/platform.h: Add prototype SystemMkdirhierForFile.
	* src/platform.cpp (SystemMkdirhierForFile): Add definition.
	* src/unparse.cpp (Unparse): Use SystemMkdirhierForFile - patch
	199.

2001-10-15  Michael Ernst  <mernst@alum.mit.edu>

	* src/platform.h: Fix typos, and reindent comments to 80 columns -
	patch 204.

2001-10-15  C. Scott Ananian  <cananian@alumni.princeton.edu>

	* src/body.cpp (ProcessClassDeclaration): Hack to fix bug 1954:
	patch 86 broke behavior of local classes in a static context; this
	needs to be fixed correctly before 1.16 - patch 195.

2001-10-15  Michael Ernst  <mernst@alum.mit.edu>

	* src/stream.cpp:
	* src/stream.h (class LexStream): Change file_read to bool, to
	match its use - patch 201.

2001-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h (InvertIfOpCode): Fix regression caused by patch
	167, as reported in bug 1982 - patch 205.

2001-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h:
	* src/bytecode.cpp (GenerateClassAccess): Fix a regression
	reported in bug 2016 with class literal - patch 206.

2001-10-13  Daniel Resare  <noa@metamatrix.se>

	* jikes.spec: Properly set the file ownership to root

2001-10-13  Chris Abbey  <jikes@cabbey.net>

	* jikes.spec: set version to make it obvious if someone is using
	CVS versions.
	
2001-10-12  Eric Blake  <ebb9@email.byu.edu>

	* jikes.spec: Update to version 1.15.
	* configure.in: Change version to 1.15a to make it obvious when
	bug reports are made against CVS.
	* configure: