@@ -251,7 +251,8 @@ void LexStream::Dump()
 
     if ((tokfile = SystemFopen(tokfile_name, "w")) == NULL)
     {
-        Coutput << "*** Cannot open file " << tokfile_name << endl;
+        Coutput << "*** Cannot open LexStream dump output file "
+                << tokfile_name << endl;
         return;
     }
 
